feat: 路由加载完成

--- a/src/index.less
+++ b/src/index.less
@@ -7,8 +7,8 @@
   font-weight: normal;
 }
 
-.wrapper {
-  display: flex;
-  color: @color;
-  font-family: 'DIN';
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
